re PR c++/28858 (Algorithm to find the end of a template parameter list is flawed)

PR c++/28858
	* parser.c (cp_parser_skip_until_found): Rename to
	cp_parser_skip_to_end_of_template_parameter_list.  Remove last two
	parameters.  Track levels of '< ... >'.  Stop at '{', '}', or ';'.
	Reorganize.  Adjust comment.
	(cp_parser_template_declaration_after_export): Adjust call.
	(cp_parser_enclosed_template_argument_list): Likewise.

	* g++.dg/parse/template20.C: New test.
	* g++.dg/template/operator8.C: Remove obsolete part.
	* g++.dg/parse/def-tmpl-arg1.C: Adjust error-markers.
	* g++.old-deja/g++.pt/crash65.C: Likewise.

From-SVN: r116788